--- a/Main.html
+++ b/Main.html
@@ -6,12 +6,15 @@
     <script src="JS/JSMain.js"></script>
 </head>
 <body>
-<form action="" method="post">
+<form>
     <label for="fname">First name:</label><br>
-    <input type="text" id="fname" name="fname" onblur="errore('fname', 'Error_fname')" required><label for="fname" id="Error_fname"></label><br>
+    <input type="text" id="fname" name="fname" onblur="errore('fname', 'Error_fname')" onkeydown="vuoto('fname', 'Error_fname')" required>
+    <label for="fname" id="Error_fname"></label><br>
+
     <label for="lname">Last name:</label><br>
-    <input type="text" id="lname" name="lname" onblur="errore('lname', 'Error_lname')" required><label for="fname" id="Error_lname"></label><br>
-    <br>
+    <input type="text" id="lname" name="lname" onblur="errore('lname', 'Error_lname')" onkeydown="vuoto('lname', 'Error_lname')" required>
+    <label for="fname" id="Error_lname"></label><br>
+
     <input type="submit" value="Submit">
 </form>
 </body>
